Use localstack 4.12. Use localstack's default AWS region. Set AWS credentials and region via mise.